payments-core/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: payments-core-strict-mtls
  namespace: novapay
spec:
  selector:
    matchLabels:
      app: payments-core
  mtls:
    mode: STRICT
