payments-core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-core-service
  namespace: novapay
  annotations:
    service.kubernetes.io/aws-load-balancer-type: "nlb"
    service.kubernetes.io/aws-load-balancer-scheme: "internet-facing" # or "internal" if needed
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-interval: "30"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-timeout: "5"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-healthy-threshold: "3"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-unhealthy-threshold: "3"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-access-logs-enabled: "true"
spec:
  selector:
    app: payments-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer  # Changed to LoadBalancer for external access
